--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/alexandreeberhardt/UVWEB#readme",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "@prisma/client": "^6.11.1",
     "fastify": "^5.4.0"
   },
